--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Xlicon-MD",
   "version": "3.0.5",
   "description": "Xlicon-MD, A modular advanced wabot",
-  "logo": "https://i.ibb.co/FsvbwqF/XLICON.jpg",
+  "logo": "https://telegra.ph/file/d0f5be574b5951b57e82b.jpg",
   "keywords": ["whatsapp", "bot", "md", "multi-device", "Xlicon", "Xlicon-MD", "wabot", "termux-bot", "sc-bot"],
   "repository": "https://github.com/Oyysreejan/XLICON-V3-MD",
   "stack": "container",
